--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "chai",
     "mocha",
     "protractor",
+    "protractor automation",
+    "protractor boilerplate",
+    "protractor example",
     "ts-node",
     "typescript",
     "e2e",
